--- a/index.htm
+++ b/index.htm
@@ -464,7 +464,7 @@
                                 logo
                             }) => {
                                 const fixedName = unifyTvgName(name);
-                                result += `#EXTINF:-1 tvg-name="${fixedName}" tvg-logo="https://epg.v1.mk/logo/${fixedName}.png" group-title="${grp}",${name}\n${url}\n`;
+                                result += `#EXTINF:-1 tvg-name="${fixedName}" tvg-logo="https://11.112114.xyz/logo/${fixedName}.png" group-title="${grp}",${name}\n${url}\n`;
                             });
                         });
                     }
@@ -563,3 +563,4 @@
 </body>
 
 </html>
+
